@@ -28,7 +28,7 @@
 /* Offset of reed_solomon_redundancy.  */
 #define GRUB_KERNEL_I386_PC_REED_SOLOMON_REDUNDANCY	0x10
 
-#define GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART 0x6e0
+#define GRUB_KERNEL_I386_PC_NO_REED_SOLOMON_PART 0x7e0
 
 /* The segment where the kernel is loaded.  */
 #define GRUB_BOOT_I386_PC_KERNEL_SEG	0x800
